[package]
name = "tempo-precompiles"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "TODO:"

[lints]
workspace = true

[dependencies]
reth-evm.workspace = true
reth-storage-api.workspace = true
alloy = { workspace = true, features = ["contract", "sol-types", "rpc"] }
alloy-evm.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true

tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
alloy-signer.workspace = true
alloy-signer-local.workspace = true
alloy-primitives = { workspace = true, features = ["rand"] }
eyre.workspace = true

[[bench]]
name = "tempo_precompiles"
harness = false
