[package]
name = "tempo-revm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tempo-precompiles.workspace = true
tempo-contracts.workspace = true
reth-evm.workspace = true
alloy-primitives.workspace = true

tracing.workspace = true

[dev-dependencies]
eyre.workspace = true
