
[package]
name = "tempo-transaction-pool"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
tempo-precompiles.workspace = true

reth-transaction-pool.workspace = true
reth-chainspec.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives-traits.workspace = true
reth-storage-api.workspace = true

alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-eips.workspace = true

[dev-dependencies]
reth-transaction-pool.workspace = true
reth-provider = { workspace = true, features = ["test-utils"] }
alloy-eips.workspace = true
tokio.workspace = true
